openjdk23/jdk/test/langtools/tools/javac/annotations/neg/Z3.java
/*
 * StarshipOS Copyright (c) 2025. R.A. James
 */

enum Color { red, green, blue }

class Colored {
    Color value() default Color.red;
}
